--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
             java.srcDirs = ['src/main/java']
             res.srcDirs = [
                     'src/main/res',
+                    'src/main/models/common',
                     'src/main/models/base',
                     'src/main/models/main'
             ]
